# sol-tool

./: .env.example  .gitignore  Cargo.toml  README.md  sol-tool.code-workspace
.github/workflows/: release.yml
src/: main.rs  price.rs  rpc.rs  utils.rs
src/commands/: clean.rs  create_ata.rs  mod.rs  monitor.rs  portfolio.rs  rent.rs  rpc_bench.rs  scan.rs
src/solanapay/: mod.rs  relay.rs
