[package]
name = "sol-tool"
version = "1.0.0"
edition = "2021"
description = "⚡ sol-tool — Swiss army knife for Solana: reclaim rent, portfolio tracker, wallet scanner, RPC benchmark"
license = "MIT"
readme = "README.md"
keywords = ["solana", "cli", "crypto", "wallet", "blockchain"]
categories = ["command-line-utilities"]

[dependencies]
# Solana
solana-client = "~2.2"
solana-sdk = "~2.2"
solana-account-decoder = "~2.2"
solana-transaction-status = "~2.2"
spl-token = "7"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "color", "env"] }
dotenvy = "0.15"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
chrono = "0.4"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Display
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
tabled = "0.15"

# Errors
anyhow = "1"

# Solana Pay (QR-based wallet signing)
qr2term = "0.3"
base64 = "0.22"
bincode = "1"
warp = { version = "0.4.2", features = ["server"] }
uuid = { version = "1.20.0", features = ["v4"] }
urlencoding = "2.1.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
